# mdx

./: .gitignore  LICENSE  README.md  USAGE.md  mdx.toml  pyproject.toml  skill.md  software-agreement-skill.md
docs/: ARCHITECTURE.md  PROJECT_SPEC.md
src/mdx/: __init__.py  cli.py  config.py  converter.py  docx_converter.py  parser.py  pdf_converter.py  styles.py  validation.py
