[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdx-cli"
version = "0.1.0"
description = "Convert Markdown documents into professionally formatted DOCX and PDF files."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "MDX Contributors" }
]
dependencies = [
  "registers[cli]>=7.2.4",
  "python-docx>=1.1.2",
  "markdown-it-py>=3.0.0",
  "docx2pdf>=0.1.8",
]

[project.scripts]
mdx = "mdx.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
